# src/main/java/com/vasquez/mstransaction/entity/Transaction.java
@@ -1,13 +1,21 @@
 package com.vasquez.mstransaction.entity;
 
-import lombok.*;
+import java.time.LocalDateTime;
+import javax.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
-import javax.validation.constraints.NotNull;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-
+/**
+ * Transaction entity.
+ *
+ * @author Vasquez
+ * @version 1.0.
+ */
 @Data
 @Builder
 @ToString
@@ -16,33 +24,35 @@ import java.time.LocalDateTime;
 @Document(collection = "transaction")
 public class Transaction {
 
-    @Id
-    private String transactionId;
+  @Id
+  private String transactionId;
 
-    @NotNull
-    private String transactionTypeId;
+  @NotNull
+  private String transactionTypeId;
 
-    @NotNull
-    private String fromClientId;
+  @NotNull
+  private String fromClientId;
 
-    @NotNull
-    private String fromProductId;
+  @NotNull
+  private String fromProductId;
 
-    @NotNull
-    private String fromAccountNumber;
+  @NotNull
+  private String fromAccountNumber;
 
-    @NotNull
-    private String toClientId;
+  @NotNull
+  private String toClientId;
 
-    @NotNull
-    private String toProductId;
+  @NotNull
+  private String toProductId;
 
-    @NotNull
-    private String toAccountNumber;
+  @NotNull
+  private String toAccountNumber;
 
-    @NotNull
-    private Double transactionAmount;
+  @NotNull
+  private Double transactionAmount;
 
-    private LocalDateTime transactionDate = LocalDateTime.now();
+  private Double commissionPerTransaction;
+
+  private LocalDateTime transactionDate = LocalDateTime.now();
 
 }
