# src/main/java/com/vasquez/mstransaction/entity/TransactionType.java
@@ -1,11 +1,21 @@
 package com.vasquez.mstransaction.entity;
 
-import lombok.*;
+import javax.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
-import javax.validation.constraints.NotNull;
 
+/**
+ * Transaction type entity.
+ *
+ * @author Vasquez
+ * @version 1.0.
+ */
 @Data
 @Builder
 @ToString
@@ -14,10 +24,10 @@ import javax.validation.constraints.NotNull;
 @Document(collection = "transaction_type")
 public class TransactionType {
 
-    @Id
-    private String transactionTypeId;
+  @Id
+  private String transactionTypeId;
 
-    @NotNull
-    private String name;
+  @NotNull
+  private String name;
 
 }
